--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button id="squats_info" onclick="toggle3()">Squats</button>
                 <br><br>
                 <div id="display3_info">
-                    <h3>Squats can strengthen places like your core, reduce your risk of injury, crushed calories, and strengthens the muscles of your lower body.</h3>
+                    <h3>Squats can strengthen places like your core, reduce your risk of injury, crush calories, and strengthens the muscles of your lower body.</h3>
                     <br>
                     <img height="300" width="350" src="https://static-bebeautiful-in.unileverservices.com/how-to-do-basic-squats.gif">
                 </div>
