--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <br><br>
             
                 <div id="display_info">
-                    <h3>Pushups can strengthen places like your triceps and shoulders.</h3>
+                    <h3>Pushups can strengthen areas like your triceps and shoulders.</h3>
                     <br>
                     <img src="https://media0.giphy.com/media/5t9IcXiBCyw60XPpGu/giphy.gif">
                 </div>
@@ -26,7 +26,7 @@
                 <button id="plank_info" onclick="toggle2()">Planks</button>
                 <br><br>
                 <div id="display2_info">
-                    <h3>Planks can strengthen places like your spine, core, quads, and hamstrings.</h3>
+                    <h3>Planks can strengthen areas like your spine, core, quads, and hamstrings.</h3>
                     <br>
                     <img height="300" width="350" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/hdm119918mh15842-1545237096.png">
                 </div>
@@ -34,7 +34,7 @@
                 <button id="squats_info" onclick="toggle3()">Squats</button>
                 <br><br>
                 <div id="display3_info">
-                    <h3>Squats can strengthen places like your core, reduce your risk of injury, crush calories, and strengthens the muscles of your lower body.</h3>
+                    <h3>Squats can strengthen areas like your core, reduce your risk of injury, crush calories, and strengthens the muscles of your lower body.</h3>
                     <br>
                     <img height="300" width="350" src="https://static-bebeautiful-in.unileverservices.com/how-to-do-basic-squats.gif">
                 </div>
@@ -42,7 +42,7 @@
                 <button id="lunges_info" onclick="toggle4()">Lunges</button>
                 <br><br>
                 <div id="display4_info">
-                    <h3>Lunges can strengthen places like your core, hamstrings, and quads.</h3>
+                    <h3>Lunges can strengthen areas like your core, hamstrings, and quads.</h3>
                     <br>
                     <img height="300" width="350" src="https://thumbs.gfycat.com/AbleFondChick-small.gif">
                 </div>
